[package]
name = "book"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
wgpu = "0.11"
bytemuck = "1.13"
cgmath = "0.18"
env_logger = "0.9"
futures = "0.3"
gfx-hal = "0.9"
image = "0.23"
log = "0.4"
pollster = "0.2"
winit = "0.25"
anyhow = "1.0"
rand = "0.8"

[[example]]
name = "01"
path = "examples/01/test.rs"

[[example]]
name = "rotate2d"
path = "examples/13/rotate2d.rs"

[[example]]
name = "boids"
path = "examples/13/boids.rs"
